# news_summary

./: README.md  env  pyproject.toml
output/: Banking_report.md  Funny_report.md  Healthcare_report.md  report.md
src/news_summary/: crew.py  main.py
src/news_summary/config/: agents.yaml
