[project]
name = "news_summary"
version = "0.1.0"
description = "news_summary using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
news_summary = "news_summary.main:run"
run_crew = "news_summary.main:run"
train = "news_summary.main:train"
replay = "news_summary.main:replay"
test = "news_summary.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
